--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -37,5 +37,8 @@
         <li>¾ cup grated Parmesan cheese, divided</li>
       </ul>
     </p>
+    <h3>
+      <a href="../index.html">Back to front page</a>
+    </h3>
   </body>
 </html>
