--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <h1>Odin Recipes</h1>
     <p><a href="recipes/lasagna.html">Lasagna</a></p>
+    <p><a href="recipes/pastaalfredo.html">Pasta alfredo</a></p>
+    <p><a href="recipes/Chili.html">Chili</a></p>
   </body>
 </html>
