fixed a capital C resulting in not finding link

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Odin Recipes</h1>
     <p><a href="recipes/lasagna.html">Lasagna</a></p>
     <p><a href="recipes/pastaalfredo.html">Pasta alfredo</a></p>
-    <p><a href="recipes/Chili.html">Chili</a></p>
+    <p><a href="recipes/chili.html">Chili</a></p>
   </body>
 </html>
