--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <img src="https://images.megapixl.com/4991/49919770.jpg" />
     <p><a href="recipes/lasagna.html">Lasagna</a></p>
     <p><a href="recipes/pastaalfredo.html">Pasta alfredo</a></p>
     <p><a href="recipes/chili.html">Chili</a></p>
