--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin's Recipes!</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <img src="https://images.megapixl.com/4991/49919770.jpg" />
-    <p><a href="recipes/lasagna.html">Lasagna</a></p>
-    <p><a href="recipes/pastaalfredo.html">Pasta alfredo</a></p>
-    <p><a href="recipes/chili.html">Chili</a></p>
+    <div class="container">
+      <h1>Odin Recipes</h1>
+      <img src="https://images.megapixl.com/4991/49919770.jpg" />
+      <p><a href="recipes/lasagna.html">Lasagna</a></p>
+      <p><a href="recipes/pastaalfredo.html">Pasta alfredo</a></p>
+      <p><a href="recipes/chili.html">Chili</a></p>
+    </div>
   </body>
 </html>
